--- a/최준혁/JpaExample/src/main/resources/application.yml
+++ b/최준혁/JpaExample/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: ${DB_USER_NAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    validate: true
 
   jpa:
     hibernate:
